osd: make sure we drop Backoff PGRefs on shutdown

Fixes: http://tracker.ceph.com/issues/19931

Signed-off-by: Greg Farnum <gfarnum@redhat.com>